--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -292,9 +292,6 @@ Data Entry - Elements
 
             table.columns().every(function ()
             {
-                // Clear any left over filtering from state saving.
-                this.search("", 1).draw()
-
                 if (this.visible())
                 {
                     $(".btn.btn-primary.btn-xs[data-columnIndex = " + this.index() + "]").addClass("active")
@@ -304,6 +301,9 @@ Data Entry - Elements
                     $(".btn.btn-primary.btn-xs[data-columnIndex = " + this.index() + "]").removeClass("active")
                 }
             })
+
+            // Clear any left over filtering from state saving.
+            table.search("").columns().search("").draw()
         })
     </script>
 {% endblock %}
