Added table-hover style to tables.

--- a/app/templates/elementAttributes/elementAttributes.html
+++ b/app/templates/elementAttributes/elementAttributes.html
@@ -22,7 +22,7 @@ Element Attributes
     <h1>Element Attributes <small></small></h1>
 </div>
 <div>
-    <table id = "elementAttributesTable" class = "table" style = "display:none">
+    <table id = "elementAttributesTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Element Attribute Template</th>
