--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -78,7 +78,7 @@ Data Entry - Elements
     {% endif %}
 </div>
 <div>
-    <table id = "table" class = "table" style = "display:none">
+    <table id = "table" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
