--- a/app/templates/eventFrames/overlayBuilder.html
+++ b/app/templates/eventFrames/overlayBuilder.html
@@ -55,7 +55,7 @@ Event Frames
         <img src = '{{ url_for("static", filename = "images/loading.gif") }}'>
     </div>
     <div>
-        <table id = "table" class = "table" style = "display:none">
+        <table id = "table" class = "table table-hover" style = "display:none">
             <thead>
                 <tr>
                     <th>Event Frame Id</th>
