--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -121,7 +121,7 @@ Event Frames
     </div>
 {% endif %}
 <div>
-    <table id = "table" class = "table" style = "display:none">
+    <table id = "table" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
@@ -261,7 +261,7 @@ Event Frames
         <a class = "btn btn-default" title = "Add" href = "{{ url_for("eventFrameAttributeTemplates.addEventFrameAttributeTemplate", 
             eventFrameTemplateId = parent.EventFrameTemplateId) }}" role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
         <br><br>
-        <table id = "eventFrameAttributeTemplatesTable" class = "table" style = "display:none">
+        <table id = "eventFrameAttributeTemplatesTable" class = "table table-hover" style = "display:none">
             <thead>
                 <tr>
                     <th>Name</th>
