--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -38,7 +38,7 @@ Lookups
             <span class = "glyphicon glyphicon-plus"></span></a>
         <br><br>
     {% endif %}
-    <table id = "lookupsTable" class = "table" style = "display:none">
+    <table id = "lookupsTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
