--- a/app/templates/physicalModels/select.html
+++ b/app/templates/physicalModels/select.html
@@ -44,7 +44,7 @@ Physical Models
             <span class = "glyphicon glyphicon-plus"></span></a>
         <br><br>
     {% endif %}
-    <table id = "physicalModelsTable" class = "table" style = "display:none">
+    <table id = "physicalModelsTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
