--- a/app/templates/tagValueNotes/tagValueNotes.html
+++ b/app/templates/tagValueNotes/tagValueNotes.html
@@ -65,7 +65,7 @@ Tag Value Notes
             <span class = "glyphicon glyphicon-plus"></span></a>
         <br><br>
     {% endif %}
-    <table id = "tagValueNotesTable" class = "table" style = "display:none">
+    <table id = "tagValueNotesTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Timestamp</th>
