--- a/app/templates/tagValues/tagValues.html
+++ b/app/templates/tagValues/tagValues.html
@@ -97,7 +97,7 @@ Tag Values
     <div id = "divLoading" class = "text-center">
         <img src = '{{ url_for("static", filename = "images/loading.gif") }}'>
     </div>
-    <table id = "tagValuesTable" class = "table" style = "display:none">
+    <table id = "tagValuesTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Timestamp</th>
