--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -45,7 +45,7 @@ Tags
             <span class = "glyphicon glyphicon-plus"></span> Lookup Tag</a>
     <br><br>    
     {% endif %}
-    <table id = "tagsTable" class = "table" style = "display:none">
+    <table id = "tagsTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
