--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -21,7 +21,7 @@ Units of Measurment
     <br><br>
 </div>
 <div>
-    <table id = "unitOfMeasurementsTable" class = "table" style = "display:none">
+    <table id = "unitOfMeasurementsTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Name</th>
