--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -27,7 +27,7 @@
     <a class = "btn btn-default" title = "Grafana" href = "{{ "ElementValuesGraph" | grafanaUrl({"elementId": element.ElementId}) }}" target = "_blank">
         <span class = "glyphicon glyphicon-stats"></span></a>
     <br><br>
-    <table id = "attributesTable" class = "table" style = "display:none">
+    <table id = "attributesTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th></th>
