--- a/app/templates/eventFrameAttributes/eventFrameAttributes.html
+++ b/app/templates/eventFrameAttributes/eventFrameAttributes.html
@@ -25,7 +25,7 @@ Event Frame Attributes
     <h1>Event Frame Attributes <small></small></h1>
 </div>
 <div>
-    <table id = "eventFrameAttributesTable" class = "table" style = "display:none">
+    <table id = "eventFrameAttributesTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Event Frame Template</th>
