--- a/app/templates/users/users.html
+++ b/app/templates/users/users.html
@@ -19,7 +19,7 @@ Users
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("users.addUser") }}" role = "button">
         <span class = "glyphicon glyphicon-plus"></span></a>
     <br><br>
-    <table id = "usersTable" class = "table" style = "display:none">
+    <table id = "usersTable" class = "table table-hover" style = "display:none">
         <thead>
             <tr>
                 <th>Name</th>
