--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,7 +98,7 @@
             {% endif %}
             <div class = "{{ alertClass }}">
                 <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
-                {{ message }}
+                {{ message | safe }}
             </div>
         {% endfor %}
     </div>
