--- a/app/templates/eventFrameAttributes/eventFrameAttributes.html
+++ b/app/templates/eventFrameAttributes/eventFrameAttributes.html
@@ -50,7 +50,7 @@ Event Frame Attributes
                     {% set eventFrameAttribute = None %}
                 {% endif %}
                 <tr>
-                <td>{{ eventFrameAttributeTemplate.path() | safe }}</td>
+                <td>{{ eventFrameAttributeTemplate.path() }}</td>
                 <td>{{ eventFrameAttributeTemplate.Name }}</td>
                 <td>
                     <div class = "form-group">
